--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
@@ -5,129 +5,139 @@
 }
 
 
-<h2>Adicionar Novo Planejamento</h2>
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h2 class="card-title">Cadastrar Nova Organização</h2>
+                    </div>
+                    <form asp-action="Create" id="form" name="form">
+                        <div class="card-body">
 
-<hr />
-<div class="row">
-    <div class="col-md-8">
-        <form asp-action="Create" id="form" name="form">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="ocupation col-md-6">
-                <div class="form-group">
-                    <label asp-for="SalaId" class="control-label"></label>
-                    @Html.DropDownListFor(model => model.SalaId, ViewBag.salas as SelectList, new
-               { @class = "form-control", @id = "sala" })
-                    <span asp-validation-for="SalaId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="UsuarioId" class="control-label"></label>
-                    @Html.DropDownListFor(model => model.UsuarioId, ViewBag.usuarios as SelectList, new
-               { @class = "form-control", @id = "usuario" })
-                    <span asp-validation-for="UsuarioId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Objetivo" class="control-label"></label>
-                    <input asp-for="Objetivo" id="objetivo" class="form-control" />
-                    <span asp-validation-for="Objetivo" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="ocupation col-md-8">
-                <div class="form-group align-element ">
-                    <label asp-for="DataInicio" class="control-label"></label>
-                    <input asp-for="DataInicio" id="dataInicio" class="form-control" />
-                    <span asp-validation-for="DataInicio" class="text-danger"></span>
-                </div>
-                <div class="form-group align-element ">
-                    <label asp-for="DataFim" class="control-label"></label>
-                    <input asp-for="DataFim" id="dataFim" class="form-control" />
-                    <span asp-validation-for="DataFim" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="ocupation col-md-10">
-                <div class="form-group align-element">
-                    <label asp-for="HorarioInicio" class="control-label"></label>
-                    <input asp-for="HorarioInicio" id="horarioInicio" class="form-control" />
-                    <span asp-validation-for="HorarioInicio" class="text-danger"></span>
-                </div>
-
-                <div class="form-group align-element">
-                    <label asp-for="HorarioFim" class="control-label"></label>
-                    <input asp-for="HorarioFim" id="horarioFim" class="form-control" />
-                    <span asp-validation-for="HorarioFim" class="text-danger"></span>
-                </div>
-
-                <div class="form-group align-element">
-                    <label asp-for="DiaSemana" class="control-label"></label>
-                    <select asp-for="DiaSemana" id="input-dia-semana" class="select2_single form-control" tabindex="-1">
-                        <option value="SEG" selected> Segunda </option>
-                        <option value="TER"> Terça   </option>
-                        <option value="QUA"> Quarta  </option>
-                        <option value="QUI"> Quinta  </option>
-                        <option value="SEX"> Sexta   </option>
-                        <option value="SAB"> Sábado  </option>
-                        <option value="DOM"> Domingo </option>
-                    </select>
-                </div>
-
-                <div class="form-group align-element">
-                    <a id="add-novo-horario" onclick="AdicionarNovoHorario()" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
-                </div>
-                <br />
-                <span class="text-danger" id="mensagem-erro-horarios" hidden></span>
-            </div>
-
-                <section class="content">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-8">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <h3 class="card-title">Horários Adicionados</h3>
-                                    </div>
-                                    <div class="card-body">
-                                        <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-                                            <thead>
-                                                <tr>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="container-horarios">
-                                                @if (Model != null)
-                                                {
-                                                    @for (var i = 0; i < Model.Horarios.Count; i++)
-                                                    {
-                                                        <tr id="novo-horario-@i" class="horarios-planejamento">
-                                                            <td>
-                                                                <input class="form-control" type="time" name="Horarios[@i].HorarioInicio" hidden readonly value="@Model.Horarios[i].HorarioInicio" />
-                                                                <input class="form-control" type="time" name="Horarios[@i].HorarioFim" hidden readonly value="@Model.Horarios[i].HorarioFim" />
-                                                                <input class="form-control" name="Horarios[@i].DiaSemana" hidden readonly value="@Model.Horarios[i].DiaSemana" />
-
-                                                                <p class="form-control"> @Model.Horarios[i].HorarioInicio / @Model.Horarios[i].HorarioFim - @Model.Horarios[i].DiaSemana</p>
-                                                            </td>
-
-                                                            <td>
-                                                                <a id="remove-novo-horario" onclick="RemoveNovoHorario('novo-horario-@i')" class="btn btn-danger"><i class="nav-icon fa fa-trash text-white"></i> </a>
-                                                            </td>
-                                                        </tr>
-                                                    }
-                                                }
-                                            </tbody>
-                                        </table>
-                                    </div>
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="ocupation col-md-5">
+                                <div class="form-group">
+                                    <label asp-for="SalaId" class="control-label"></label>
+                                    @Html.DropDownListFor(model => model.SalaId, ViewBag.salas as SelectList, new
+                               { @class = "form-control", @id = "sala" })
+                                    <span asp-validation-for="SalaId" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="UsuarioId" class="control-label"></label>
+                                    @Html.DropDownListFor(model => model.UsuarioId, ViewBag.usuarios as SelectList, new
+                               { @class = "form-control", @id = "usuario" })
+                                    <span asp-validation-for="UsuarioId" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Objetivo" class="control-label"></label>
+                                    <input asp-for="Objetivo" id="objetivo" class="form-control" />
+                                    <span asp-validation-for="Objetivo" class="text-danger"></span>
                                 </div>
                             </div>
+                            <div class="ocupation col-md-10">
+                                <div class="form-group align-element ">
+                                    <label asp-for="DataInicio" class="control-label"></label>
+                                    <input asp-for="DataInicio" id="dataInicio" class="form-control" />
+                                    <span asp-validation-for="DataInicio" class="text-danger"></span>
+                                </div>
+                                <div class="form-group align-element ">
+                                    <label asp-for="DataFim" class="control-label"></label>
+                                    <input asp-for="DataFim" id="dataFim" class="form-control" />
+                                    <span asp-validation-for="DataFim" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="ocupation col-md-10">
+                                <div class="form-group align-element">
+                                    <label asp-for="HorarioInicio" class="control-label"></label>
+                                    <input asp-for="HorarioInicio" id="horarioInicio" class="form-control" />
+                                    <span asp-validation-for="HorarioInicio" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group align-element">
+                                    <label asp-for="HorarioFim" class="control-label"></label>
+                                    <input asp-for="HorarioFim" id="horarioFim" class="form-control" />
+                                    <span asp-validation-for="HorarioFim" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group align-element">
+                                    <label asp-for="DiaSemana" class="control-label"></label>
+                                    <select asp-for="DiaSemana" id="input-dia-semana" class="select2_single form-control" tabindex="-1">
+                                        <option value="SEG" selected> Segunda </option>
+                                        <option value="TER"> Terça   </option>
+                                        <option value="QUA"> Quarta  </option>
+                                        <option value="QUI"> Quinta  </option>
+                                        <option value="SEX"> Sexta   </option>
+                                        <option value="SAB"> Sábado  </option>
+                                        <option value="DOM"> Domingo </option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group align-element">
+                                    <a id="add-novo-horario" onclick="AdicionarNovoHorario()" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
+                                </div>
+                                <br />
+                                <span class="text-danger" id="mensagem-erro-horarios" hidden></span>
+                            </div>
+
+                            <section class="content">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="card">
+                                                <div class="card-header">
+                                                    <h3 class="card-title">Horários Adicionados</h3>
+                                                </div>
+                                                <div class="card-body">
+                                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                                        <thead>
+                                                            <tr>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody id="container-horarios">
+                                                            @if (Model != null)
+                                                            {
+                                                                @for (var i = 0; i < Model.Horarios.Count; i++)
+                                                                {
+                                                                    <tr id="novo-horario-@i" class="horarios-planejamento">
+                                                                        <td>
+                                                                            <input class="form-control" type="time" name="Horarios[@i].HorarioInicio" hidden readonly value="@Model.Horarios[i].HorarioInicio" />
+                                                                            <input class="form-control" type="time" name="Horarios[@i].HorarioFim" hidden readonly value="@Model.Horarios[i].HorarioFim" />
+                                                                            <input class="form-control" name="Horarios[@i].DiaSemana" hidden readonly value="@Model.Horarios[i].DiaSemana" />
+
+                                                                            <p class="form-control"> @Model.Horarios[i].HorarioInicio / @Model.Horarios[i].HorarioFim - @Model.Horarios[i].DiaSemana</p>
+                                                                        </td>
+
+                                                                        <td>
+                                                                            <a id="remove-novo-horario" onclick="RemoveNovoHorario('novo-horario-@i')" class="btn btn-danger"><i class="nav-icon fa fa-trash text-white"></i> </a>
+                                                                        </td>
+                                                                    </tr>
+                                                                }
+                                                            }
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
                         </div>
-                    </div>
-                </section>
 
-            <div class="form-group col-sm-4">
-                <input type="submit" id="btn-create-planejamento" value="Salvar" class="btn btn-success" /> |
-                <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                        <div class="card-footer">
+                            <div class="col-md-4">
+                                <input type="submit" value="Salvar" class="btn btn-success" /> |
+                                <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-        </form>
+        </div>
     </div>
-</div>
+</section>
 
 
 @if (TempData["mensagemSucesso"] != null)
