--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Edit.cshtml
@@ -4,84 +4,95 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Alterar Planejamento</h2>
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h2 class="card-title">Atualizar Planejamento</h2>
+                    </div>
+                    <form asp-action="Edit">
+                        <div class="card-body">
 
-<hr />
-<div class="row">
-    <div class="col-md-8">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="ocupation col-md-6">
-                <div class="form-group" hidden>
-                    <input asp-for="Id" id="id-item" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="SalaId" class="control-label"></label>
-                    @Html.DropDownListFor(model => model.SalaId, ViewBag.salas as SelectList, new
-               { @class = "form-control", @id = "sala" })
-                    <span asp-validation-for="SalaId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="UsuarioId" class="control-label"></label>
-                    @Html.DropDownListFor(model => model.UsuarioId, ViewBag.usuarios as SelectList, new
-               { @class = "form-control", @id = "usuario" })
-                    <span asp-validation-for="UsuarioId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Objetivo" class="control-label"></label>
-                    <input asp-for="Objetivo" id="objetivo" class="form-control" />
-                    <span asp-validation-for="Objetivo" class="text-danger"></span>
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="ocupation col-md-5">
+                                <div class="form-group" hidden>
+                                    <input asp-for="Id" id="id-item" class="form-control" />
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="SalaId" class="control-label"></label>
+                                    @Html.DropDownListFor(model => model.SalaId, ViewBag.salas as SelectList, new
+                               { @class = "form-control", @id = "sala" })
+                                    <span asp-validation-for="SalaId" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="UsuarioId" class="control-label"></label>
+                                    @Html.DropDownListFor(model => model.UsuarioId, ViewBag.usuarios as SelectList, new
+                               { @class = "form-control", @id = "usuario" })
+                                    <span asp-validation-for="UsuarioId" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Objetivo" class="control-label"></label>
+                                    <input asp-for="Objetivo" id="objetivo" class="form-control" />
+                                    <span asp-validation-for="Objetivo" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="ocupation col-md-10">
+                                <div class="form-group align-element">
+                                    <label asp-for="DataInicio" class="control-label"></label>
+                                    <input asp-for="DataInicio" id="dataInicio" class="form-control" />
+                                    <span asp-validation-for="DataInicio" class="text-danger"></span>
+                                </div>
+                                <div class="form-group align-element">
+                                    <label asp-for="DataFim" class="control-label"></label>
+                                    <input asp-for="DataFim" id="dataFim" class="form-control" />
+                                    <span asp-validation-for="DataFim" class="text-danger"></span>
+                                </div>
+                            </div>
+
+                            <div class="ocupation ocupation col-md-10">
+                                <div class="form-group align-element">
+                                    <label asp-for="HorarioInicio" class="control-label"></label>
+                                    <input asp-for="HorarioInicio" id="horarioInicio" class="form-control" />
+                                    <span asp-validation-for="HorarioInicio" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group align-element">
+                                    <label asp-for="HorarioFim" class="control-label"></label>
+                                    <input asp-for="HorarioFim" id="horarioFim" class="form-control">
+                                    <span asp-validation-for="HorarioFim" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group align-element">
+                                    <label asp-for="DiaSemana" class="control-label"></label>
+                                    <select asp-for="DiaSemana" id="input-dia-semana" class="select2_single form-control" tabindex="-1">
+                                        <option value="SEG"> Segunda </option>
+                                        <option value="TER"> Terça   </option>
+                                        <option value="QUA"> Quarto  </option>
+                                        <option value="QUI"> Quinta  </option>
+                                        <option value="SEX"> Sexta   </option>
+                                        <option value="SAB"> Sábado  </option>
+                                        <option value="DOM"> Domingo </option>
+                                    </select>
+                                    <span asp-validation-for="DiaSemana" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-footer">
+                            <div class=" col-md-4">
+                                <input type="submit" value="Salvar" class="btn btn-success" /> |
+                                <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-
-            <div class="ocupation  col-md-8">
-                <div class="form-group align-element">
-                    <label asp-for="DataInicio" class="control-label"></label>
-                    <input asp-for="DataInicio" id="dataInicio" class="form-control" />
-                    <span asp-validation-for="DataInicio" class="text-danger"></span>
-                </div>
-                <div class="form-group align-element">
-                    <label asp-for="DataFim" class="control-label"></label>
-                    <input asp-for="DataFim" id="dataFim" class="form-control" />
-                    <span asp-validation-for="DataFim" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="ocupation ocupation col-md-8">
-                <div class="form-group align-element">
-                    <label asp-for="HorarioInicio" class="control-label"></label>
-                    <input asp-for="HorarioInicio" id="horarioInicio" class="form-control" />
-                    <span asp-validation-for="HorarioInicio" class="text-danger"></span>
-                </div>
-
-                <div class="form-group align-element">
-                    <label asp-for="HorarioFim" class="control-label"></label>
-                    <input asp-for="HorarioFim" id="horarioFim" class="form-control">
-                    <span asp-validation-for="HorarioFim" class="text-danger"></span>
-                </div>
-
-                <div class="form-group align-element">
-                    <label asp-for="DiaSemana" class="control-label"></label>
-                    <select asp-for="DiaSemana" id="input-dia-semana" class="select2_single form-control" tabindex="-1">
-                        <option value="SEG"> Segunda </option>
-                        <option value="TER"> Terça   </option>
-                        <option value="QUA"> Quarto  </option>
-                        <option value="QUI"> Quinta  </option>
-                        <option value="SEX"> Sexta   </option>
-                        <option value="SAB"> Sábado  </option>
-                        <option value="DOM"> Domingo </option>
-                    </select>
-                    <span asp-validation-for="DiaSemana" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="form-group col-sm-4">
-                <input type="submit" value="Salvar" class="btn btn-success" /> |
-                <a class="btn btn-primary" asp-action="Index">Voltar</a>
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+</section>
 
 @if (TempData["mensagemSucesso"] != null)
 {
