--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Create.cshtml
@@ -5,84 +5,96 @@
 }
 
 
-<h2>Associar Nova Sala Exclusiva</h2>
-<hr />
-<div class="row">
-    <div class="col-md-16">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="ocupation col-md-8">
-                <div class="form-group">
-                    <label asp-for="BlocoId" class="form-control-label" for="select-bloco">Filtrar Salas por Bloco</label>
-                    @Html.DropDownListFor(model => model.BlocoId, ViewBag.blocos as SelectList, new
-                    { @class = "form-control", @id = "select-bloco", @onchange = "loadSalas()" })
-                </div>
-                <div class="form-group">
-                    <label asp-for="SalaId.Id" class="form-control-label" for="select-sala">Selecionar Sala</label>
-                    @Html.DropDownListFor(model => model.SalaId.Id, ViewBag.salas as SelectList, new
-                    { @class = "form-control", @id = "select-sala" })
-                    <span asp-validation-for="SalaId.Id" class="text-danger"></span>
-                </div>
-            </div>
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
             <div class="col-md-12">
-                <div class="form-group align-element">
-                    <label asp-for="Responsavel.Id" class="control-label">Adicione os Responsáveis</label>
-                    @Html.DropDownListFor(model => model.Responsavel.Id, ViewBag.usuarios as SelectList, new
-                    { @class = "form-control", @id = "select-usuario" })
-                    <span asp-validation-for="Responsavel.Id" class="text-danger"></span>
-                </div>
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h2 class="card-title">Associar Nova Sala Exclusiva</h2>
+                    </div>
 
-                <div class="form-group align-element">
-                    <a id="add-novo-responsavel" onclick="adicionarNovoResponsavel()" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
-                </div>
-            </div>
+                    <form asp-action="Create">
+                        <div class="card-body">
 
-            <section class="content">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <div class="card-header">
-                                    <h3 class="card-title">Responsáveis Adicionados</h3>
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="ocupation col-md-5">
+                                <div class="form-group">
+                                    <label asp-for="BlocoId" class="form-control-label" for="select-bloco">Filtrar Salas por Bloco</label>
+                                    @Html.DropDownListFor(model => model.BlocoId, ViewBag.blocos as SelectList, new
+                                    { @class = "form-control", @id = "select-bloco", @onchange = "loadSalas()" })
                                 </div>
-                                <div class="card-body">
-                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-                                        <thead>
-                                            <tr>
-                                               
-                                            </tr>
-                                        </thead>
-                                        <tbody id="container-responsaveis">
-                                            @if (Model != null)
-                                            {
-                                                @for (var i = 0; i < Model.Responsaveis.Count; i++)
-                                                {
-                                                    <tr id="novo-responsavel-@i" class="responsavel-sala">
-                                                        <td>
-                                                            <input class="form-control" name="Responsaveis[@i].Id" hidden value="@Model.Responsaveis[i].Id" />
-                                                            <p class="form-control" type="time"> @Model.Responsaveis[i].Cpf | @Model.Responsaveis[i].Nome </p>
-                                                        </td>
-                                                        <td>
-                                                            <a id="remove-novo-horario" onclick="removeNovoResponsavel('novo-responsavel-@i')" class="btn btn-danger"><i class="nav-icon fa fa-trash text-white"></i> </a>
-                                                        </td>
-                                                    </tr>
-                                                }
-                                            }
-                                        </tbody>
-                                    </table>
+                                <div class="form-group">
+                                    <label asp-for="SalaId.Id" class="form-control-label" for="select-sala">Selecionar Sala</label>
+                                    @Html.DropDownListFor(model => model.SalaId.Id, ViewBag.salas as SelectList, new
+                                    { @class = "form-control", @id = "select-sala" })
+                                    <span asp-validation-for="SalaId.Id" class="text-danger"></span>
                                 </div>
                             </div>
+                            <div class="col-md-8">
+                                <div class="form-group align-element">
+                                    <label asp-for="Responsavel.Id" class="control-label">Adicione os Responsáveis</label>
+                                    @Html.DropDownListFor(model => model.Responsavel.Id, ViewBag.usuarios as SelectList, new
+                                    { @class = "form-control", @id = "select-usuario" })
+                                    <span asp-validation-for="Responsavel.Id" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group align-element">
+                                    <a id="add-novo-responsavel" onclick="adicionarNovoResponsavel()" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
+                                </div>
+                            </div>
+
+                            <section class="content">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-md-7">
+                                            <div class="card">
+                                                <div class="card-header">
+                                                    <h3 class="card-title">Responsáveis Adicionados</h3>
+                                                </div>
+                                                <div class="card-body">
+                                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                                        <thead>
+                                                            <tr>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody id="container-responsaveis">
+                                                            @if (Model != null)
+                                                            {
+                                                                @for (var i = 0; i < Model.Responsaveis.Count; i++)
+                                                                {
+                                                                    <tr id="novo-responsavel-@i" class="responsavel-sala">
+                                                                        <td>
+                                                                            <input class="form-control" name="Responsaveis[@i].Id" hidden value="@Model.Responsaveis[i].Id" />
+                                                                            <p class="form-control" type="time"> @Model.Responsaveis[i].Cpf | @Model.Responsaveis[i].Nome </p>
+                                                                        </td>
+                                                                        <td>
+                                                                            <a id="remove-novo-horario" onclick="removeNovoResponsavel('novo-responsavel-@i')" class="btn btn-danger"><i class="nav-icon fa fa-trash text-white"></i> </a>
+                                                                        </td>
+                                                                    </tr>
+                                                                }
+                                                            }
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
                         </div>
-                    </div>
+                        <div class="card-footer">
+                            <div class="col-md-4">
+                                <input type="submit" value="Salvar" class="btn btn-success" /> |
+                                <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-            </section>
-            <div class="form-group col-md-8">
-                <input type="submit" id="btn-create-sala-exclusiva" value="Salvar" class="btn btn-success" /> |
-                <a class="btn btn-primary" asp-action="Index">Voltar</a>
             </div>
-        </form>
+        </div>
     </div>
-</div>
+</section>
 
 @if (TempData["mensagemSucesso"] != null)
 {
