--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Details.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Details.cshtml
@@ -4,32 +4,45 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Sala Exclusiva</h2>
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h2 class="card-title">Detalhes </h2>
+                    </div>
 
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Responsavel)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Responsavel.Cpf) | @Html.DisplayFor(model => model.Responsavel.Nome)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.SalaId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.SalaId.Titulo)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a href="@Url.Action("Edit", "SalaParticular", new { id = Model.Id })" class="btn btn-info"><i class="fa fa-pencil"></i> Editar </a>
-    <a class="btn btn-primary" asp-action="Index">Voltar</a>
-</div>
+                    <div class="card-body">
+                        <div class="col-md-10">
+                            <dl class="dl-horizontal">
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.Id)
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.Id)</p>
+                                </dd>
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.Responsavel)
+                                </dt>
+                                <dd>
+                                    <p class="form-control"> @Html.DisplayFor(model => model.Responsavel.Cpf) | @Html.DisplayFor(model => model.Responsavel.Nome)</p>
+                                </dd>
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.SalaId)
+                                </dt>
+                                <dd>
+                                    <p class="form-control"> @Html.DisplayFor(model => model.SalaId.Titulo)</p>
+                                </dd>
+                            </dl>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="@Url.Action("Edit", "SalaParticular", new { id = @Model.Id })" class="btn btn-info"> Editar </a> |
+                        <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
