--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Edit.cshtml
@@ -4,43 +4,55 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Editar Sala Exclusiva</h2>
-<hr />
-<div class="row">
-    <div class="col-md-16">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group" hidden>
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="ocupation col-md-8">
-                <div class="form-group">
-                    <label asp-for="BlocoId" class="form-control-label" for="select-bloco">Filtrar Salas por Bloco</label>
-                    @Html.DropDownListFor(model => model.BlocoId, ViewBag.blocos as SelectList, new
-                    { @class = "form-control", @id = "select-bloco", @onchange = "loadSalas()" })
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h2 class="card-title">Atualizar Sala Exclusiva</h2>
+                    </div>
+                    <form asp-action="Edit">
+                        <div class="card-body">
+
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="form-group" hidden>
+                                <label asp-for="Id" class="control-label"></label>
+                                <input asp-for="Id" class="form-control" />
+                                <span asp-validation-for="Id" class="text-danger"></span>
+                            </div>
+                            <div class="ocupation col-md-8">
+                                <div class="form-group">
+                                    <label asp-for="BlocoId" class="form-control-label" for="select-bloco">Filtrar Salas por Bloco</label>
+                                    @Html.DropDownListFor(model => model.BlocoId, ViewBag.blocos as SelectList, new
+                                    { @class = "form-control", @id = "select-bloco", @onchange = "loadSalas()" })
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="SalaId.Id" class="form-control-label" for="select-sala">Selecionar Sala</label>
+                                    @Html.DropDownListFor(model => model.SalaId.Id, ViewBag.salas as SelectList, new
+                                    { @class = "form-control", @id = "select-sala" })
+                                    <span asp-validation-for="SalaId.Id" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group align-element col-md-8">
+                                <label asp-for="Responsavel.Id" class="control-label">Responsável</label>
+                                @Html.DropDownListFor(model => model.Responsavel.Id, ViewBag.usuarios as SelectList, new
+                                { @class = "form-control", @id = "select-usuario" })
+                                <span asp-validation-for="Responsavel.Id" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class=" col-md-4">
+                                <input type="submit" value="Salvar" class="btn btn-success" /> |
+                                <a class="btn btn-primary" asp-action="Index">Voltar</a>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label asp-for="SalaId.Id" class="form-control-label" for="select-sala">Selecionar Sala</label>
-                    @Html.DropDownListFor(model => model.SalaId.Id, ViewBag.salas as SelectList, new
-                    { @class = "form-control", @id = "select-sala" })
-                    <span asp-validation-for="SalaId.Id" class="text-danger"></span>
-                </div>
             </div>
-            <div class="form-group align-element col-md-8">
-                <label asp-for="Responsavel.Id" class="control-label">Responsável</label>
-                @Html.DropDownListFor(model => model.Responsavel.Id, ViewBag.usuarios as SelectList, new
-                { @class = "form-control", @id = "select-usuario" })
-                <span asp-validation-for="Responsavel.Id" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-8">
-                <input type="submit" id="btn-edit-sala-exclusiva" value="Salvar" class="btn btn-success" /> |
-                <a class="btn btn-primary" asp-action="Index">Voltar</a>
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+</section>
 
 @if (TempData["mensagemSucesso"] != null)
 {
