Adequando crud Salas aos prototipos

--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
@@ -128,7 +128,7 @@
 
                         <div class="card-footer">
                             <div class="col-md-4">
-                                <input type="submit" value="Salvar" class="btn btn-success" /> |
+                                <input type="submit" id="btn-create-planejamento" value="Salvar" class="btn btn-success" /> |
                                 <a class="btn btn-primary" asp-action="Index">Voltar</a>
                             </div>
                         </div>
