--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/SalaParticular/Create.cshtml
@@ -85,7 +85,7 @@
                         </div>
                         <div class="card-footer">
                             <div class="col-md-4">
-                                <input type="submit" value="Salvar" class="btn btn-success" /> |
+                                <input type="submit" id="btn-create-sala-exclusiva" value="Salvar" class="btn btn-success" /> |
                                 <a class="btn btn-primary" asp-action="Index">Voltar</a>
                             </div>
                         </div>
